--- a/index.html
+++ b/index.html
@@ -42,4 +42,36 @@ font-family: "Sofia", sans-serif;
   padding: 15px;
   }
   
+  nav ul li a:hover {
+  background-color: pink;
+  border-radius: 5px
+  }
+  
+  .profile-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 50px auto;
+  text-align: center; 
+  }
+  
+  .profile-container img {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    
+  }
+  
+  .profile-container h2 {
+    font-family: "Playfair Display", serif;
+    font-size: 28px;
+    color: #b46d52;
+    margin-top: 20px;
+  }
+  
+  .profile-container p {
+    max-width: 600px
+    font-siz
+  }article
   
