--- a/index.html
+++ b/index.html
@@ -99,8 +99,11 @@ font-family: "Sofia", sans-serif;
     
 <!-- Profile -->
    <div class="profile-container">
-<img src="" alt="Profile Image"
+<img src="" alt="Profile Image">
 <h2>Our Story</h2>
+<p>
+  <br>
+     </p>
 </div>
   </body>
 
