--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ font-family: "Sofia", sans-serif;
     
 <!-- Profile -->
    <div class="profile-container">
-<img src="dsv" alt="Profile Image">
+<img src="Profile.jpg" alt="Profile Image">
 <h2>Our Story</h2>
 <p>
   <br>
