--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-CA">
 <head>
-<title>Pannas Fashion Boutique </title>
+<title>About Pannas Fashion Boutique </title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Playfair Display">
 <meta charset="UTF-8">
 <style>
@@ -9,14 +9,19 @@
 body {
 background-color: #ffe5ec;
 margin: 0;
-padding-top: 45px; 
 font-family: "Sofia", sans-serif;
 }
   
-  header {
+  .header {
     background-color: #ffe5ec;
     color: white;
     padding: 20px;
+    text-align: center;
+  }
+  
+    .header h1 {
+    font-family: "Playfair Display", serif;
+    font-size: 50px;
     text-align: center;
   }
   
@@ -94,7 +99,7 @@ font-family: "Sofia", sans-serif;
     </nav> 
     
   <div class="header">
-<h1>About Us</h1>
+<h1>About Pannas Fashion Boutique</h1>
 </div>
     
 <!-- Profile -->
