--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ font-family: "Sofia", sans-serif;
 }
   
   .header {
-    background-color: #ffe5ec;
+    background-color: #f7cac9;
     color: white;
     padding: 20px;
     text-align: center;
@@ -30,13 +30,16 @@ font-family: "Sofia", sans-serif;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #f7cac9;
+  background-color: #ffb5bb;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end; 
+  position: fixed;
+  top: 0;
+  width: 100%;
   }
   
   nav ul li {
-  margin: 15px
+  margin-left: 20px
   }
   
   nav ul li a {
@@ -78,7 +81,6 @@ font-family: "Sofia", sans-serif;
   .profile-container p {
     max-width: 600px;
     font-size: 18px;
-    line-height: 1.6;
     color: #5e5e5e;
     margin: 20px auto;
   }
@@ -99,7 +101,7 @@ font-family: "Sofia", sans-serif;
     </nav> 
     
   <div class="header">
-<h1>About Pannas Fashion Boutique</h1>
+<h1>About Pannas Fashion <br> Boutique</h1>
 </div>
     
 <!-- Profile -->
