--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@ font-family: "Sofia", sans-serif;
 <img src="Profile.jpg" alt="Profile Image">
 <h2>Our Story</h2>
 <p>
-  <br>
+Welcome to Panna’s Fashion Boutique! 
+Here at Panna’s Fashion Boutique we are dedicated to giving our clients exquisitely designed items that honour both heritage and contemporary having been founded with a love for distinctive and fashionable apparel. The idea behind our quest was to combine elegance, sustainability, and excellence in our one location. 
+From classic clothing to modern accessories, our boutique provides a carefully chosen selection that is meant to enhance your uniqueness.
      </p>
 </div>
   </body>
