--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-CA">
 <head>
 <title>About Pannas Fashion Boutique </title>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Playfair Display">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Playfair Display|Cormorant">
 <meta charset="UTF-8">
 <style>
   
@@ -79,10 +79,12 @@ font-family: "Sofia", sans-serif;
   }
   
   .profile-container p {
-    max-width: 600px;
+    max-width: 700px;
     font-size: 18px;
     color: #5e5e5e;
     margin: 20px auto;
+    font-family: "Cormorant"
+
   }
   
   </style>
