--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@ background-color: #ffe5ec;
 margin: 0;
 font-family: "Sofia", sans-serif;
 }
+   .about-link {
+  color: #b46d52;
+  font-weight: bold;
+  }
   
   .header {
     background-color: #f7cac9;
@@ -23,6 +27,7 @@ font-family: "Sofia", sans-serif;
     font-family: "Playfair Display", serif;
     font-size: 50px;
     text-align: center;
+    padding-top: 15px
   }
   
   nav ul { 
@@ -95,9 +100,9 @@ font-family: "Sofia", sans-serif;
 
 <nav> 
   <ul>
-<li><a class="home-link" href="#home">Home</a></li>
+<li><a href="#home">Home</a></li>
 <li><a href="#collection">Collection</a></li>
-<li><a href="#about">About</a></li>
+<li><a class="about-link" href="#about">About</a></li>
 <li><a href="#checkout">Checkout</a></li>
   </ul>    
     </nav> 
