--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 <style>
   
 body {
-background-color: #ffe5ec;
+background-image: url('Flower.jpg');
+background-repeat: no-repeat;
+background-size: cover; 
+height: auto;
+width: 100%;
 margin: 0;
 font-family: "Sofia", sans-serif;
 }
@@ -85,7 +89,7 @@ font-family: "Sofia", sans-serif;
   
   .profile-container p {
     max-width: 700px;
-    font-size: 18px;
+    font-size: 20px;
     color: #5e5e5e;
     margin: 20px auto;
     font-family: "Cormorant"
