--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <style>
   
 body {
-background-image: url('Flower.jpg');
-background-repeat: no-repeat;
-background-size: cover; 
-height: auto;
-width: 100%;
-margin: 0;
-font-family: "Sofia", sans-serif;
+ background-image: url('Flower.jpg');
+ background-repeat: no-repeat;
+ background-size: cover; 
+ height: auto;
+ width: 100%;
+ margin: 0;
+ font-family: "Sofia", sans-serif;
 }
    .about-link {
   color: #b46d52;
@@ -92,8 +92,7 @@ font-family: "Sofia", sans-serif;
     font-size: 20px;
     color: #5e5e5e;
     margin: 20px auto;
-    font-family: "Cormorant"
-
+    font-family: "Cormorant";
   }
   
   </style>
