--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ body {
  width: 100%;
  margin: 0;
  font-family: "Sofia", sans-serif;
+ padding-top: 45px;
 }
    .about-link {
   color: #b46d52;
@@ -21,7 +22,7 @@ body {
   }
   
   .header {
-    background-color: #f7cac9;
+    background-color: #f7cac9; 
     color: white;
     padding: 20px;
     text-align: center;
@@ -55,13 +56,13 @@ body {
   display: block;
   color: white;
   text-decoration: none;
-  font-size: 18px;
-  padding: 15px;
+  font-size: 20px;
+  padding: 20px;
   }
   
   nav ul li a:hover {
   background-color: pink;
-  border-radius: 5px
+  border-radius: 5px;
   }
   
   .profile-container {
