--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@ body {
 
 <nav> 
   <ul>
-<li><a href="#home">Home</a></li>
+<li><a href="https://vrunda702.github.io/Personal-Website-Homepage/">Home</a></li>
 <li><a href="#collection">Collection</a></li>
-<li><a class="about-link" href="https://vrunda702.github.io/Personal-Website-About/">About</a></li>
+<li><a class="about-link" href="#about">About</a></li>
 <li><a href="#checkout">Checkout</a></li>
   </ul>    
     </nav> 
